# cpp-multi-proj-tpl-2

./: CMakeLists.txt  Makefile
src/hello_world/: CMakeLists.txt  main.cpp
